Fix title and content

--- a/meditations/letting-go-of-anxious-thoughts.html
+++ b/meditations/letting-go-of-anxious-thoughts.html
@@ -5,22 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- SEO для конкретной медитации (поменяй название) -->
-    <title>Опора внутри меня — медитация Сурии | Стук сердца</title>
+    <!-- SEO для конкретной аудиопрограмма -->
+    <title>Опора внутри меня — аудиопрограмма Сурии | Стук сердца</title>
     <meta name="description"
-        content="Медитация «Опора внутри меня»: когда кажется, что всё рушится и держаться не за что. Помогает собрать себя изнутри, вернуть спокойствие и внутренний стержень. Аудио-практика Сурии.">
+        content="аудиопрограмма «Опора внутри меня»: когда кажется, что всё рушится и держаться не за что. Помогает собрать себя изнутри, вернуть спокойствие и внутренний стержень. Аудио-практика Сурии.">
     <meta name="author" content="Сурия, энергетический практик и таро-терапевт">
 
     <!-- Open Graph -->
-    <meta property="og:title" content="Опора внутри меня — медитация Сурии">
+    <meta property="og:title" content="Опора внутри меня — аудиопрограмма Сурии">
     <meta property="og:description"
-        content="Медитация для восстановления внутренней опоры, когда внешние опоры рушатся. Спокойствие, уверенность и стержень изнутри.">
+        content="аудиопрограмма для восстановления внутренней опоры, когда внешние опоры рушатся. Спокойствие, уверенность и стержень изнутри.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://iuliiakonovalova.github.io/stukserdza/meditation-opora-vnutri.html">
     <meta property="og:image"
         content="https://iuliiakonovalova.github.io/stukserdza/assets/images/meditations-images/inner-support-meditation-image-focus.png">
 
-    <!-- Подключи общий стиль + специальный для медитации -->
+    <!-- Подключи общий стиль + специальный для аудиопрограмма -->
     <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="stylesheet" href="../assets/css/meditation-single.css">
     <!-- Google Fonts -->
@@ -51,7 +51,7 @@
                     </li>
                     <li>
                         <a href="../meditations.html" aria-label="Go to all meditations">
-                            Медитации
+                            Медитации & аудиопрограммы
                         </a>
                     </li>
                     <li>
@@ -69,10 +69,10 @@
         <section class="med-single-hero">
             <div class="container med-single-hero-inner">
                 <div class="med-single-hero-main">
-                    <p class="med-single-badge">Медитация Сурии</p>
+                    <p class="med-single-badge">аудиопрограмма Сурии</p>
                     <h1 class="med-single-hero-title">Опора внутри меня</h1>
                     <p class="med-single-hero-text">
-                        Когда кажется, что всё рушится, а держаться не за что, эта медитация помогает собрать себя
+                        Когда кажется, что всё рушится, а держаться не за что, эта аудиопрограмма помогает собрать себя
                         изнутри. Она возвращает спокойствие, уверенность и чувство, что вы можете опереться на себя, без
                         ожиданий от других. После прослушивания исчезает растерянность, появляется внутренний стержень и
                         ощущение, что вы снова стоите на ногах.
@@ -84,7 +84,7 @@
                 </div>
                 <figure class="med-single-hero-figure">
                     <img src="../assets/images/meditations-images/inner-support-meditation-image-focus.png"
-                        alt="Медитация «Опора внутри меня» — образ спокойствия и внутренней силы"
+                        alt="аудиопрограмма «Опора внутри меня» — образ спокойствия и внутренней силы"
                         class="med-single-hero-image">
                 </figure>
             </div>
@@ -175,7 +175,8 @@
                     </p>
 
                     <p class="med-single-problem-text extra-golden-line-after">
-                        Эта медитация помогает найти и укрепить эту внутреннюю опору. Не через аффирмации и «я сильная»,
+                        Эта аудиопрограмма помогает найти и укрепить эту внутреннюю опору. Не через аффирмации и «я
+                        сильная»,
                         а через реальное ощущение в теле: я стою на своих ногах.
                     </p>
                 </div>
@@ -208,7 +209,8 @@
                 <div class="med-single-problem-content">
 
                     <p class="med-single-problem-text extra-golden-line-after">
-                        Особенно если сейчас трудно и кажется, что не на что опереться. Эта медитация напомнит вам, что
+                        Особенно если сейчас трудно и кажется, что не на что опереться. Эта аудиопрограмма напомнит вам,
+                        что
                         самая надёжная опора уже есть. Она внутри вас.
 
 
@@ -277,7 +279,7 @@
                     Главная
                 </a>
                 <a href="meditations.html" aria-label="Go to all meditations">
-                    Медитации
+                    Медитации & аудиопрограммы
                 </a>
                 <a href="#contact" aria-label="Go to contact section">
                     Контакт
