--- a/meditations.html
+++ b/meditations.html
@@ -257,7 +257,7 @@
                         </p>
                         <p class="med-card-price">3 000 ₽</p>
                         <a href="https://t.me/sofiya1203" target="_blank" rel="noopener" class="med-card-link">
-                            Получить медитацию
+                            Узнать больше
                         </a>
                     </article>
 
@@ -275,8 +275,9 @@
                             стержень и ощущение, что вы снова стоите на ногах.
                         </p>
                         <p class="med-card-price">3 000 ₽</p>
-                        <a href="https://t.me/sofiya1203" target="_blank" rel="noopener" class="med-card-link">
-                            Получить медитацию
+                        <a href="meditations/inner-support-meditation.html" class="med-card-link"
+                            aria-label="Go to inner support meditation">
+                            Узнать больше
                         </a>
                     </article>
 
@@ -294,7 +295,7 @@
                         </p>
                         <p class="med-card-price">3 000 ₽</p>
                         <a href="https://t.me/sofiya1203" target="_blank" rel="noopener" class="med-card-link">
-                            Получить медитацию
+                            Узнать больше
                         </a>
                     </article>
 
@@ -313,7 +314,7 @@
                         </p>
                         <p class="med-card-price">3 000 ₽</p>
                         <a href="https://t.me/sofiya1203" target="_blank" rel="noopener" class="med-card-link">
-                            Получить медитацию
+                            Узнать больше
                         </a>
                     </article>
 
@@ -333,7 +334,7 @@
                         </p>
                         <p class="med-card-price">3 000 ₽</p>
                         <a href="https://t.me/sofiya1203" target="_blank" rel="noopener" class="med-card-link">
-                            Получить медитацию
+                            Узнать больше
                         </a>
                     </article>
 
@@ -352,7 +353,7 @@
                         </p>
                         <p class="med-card-price">3 000 ₽</p>
                         <a href="https://t.me/sofiya1203" target="_blank" rel="noopener" class="med-card-link">
-                            Получить медитацию
+                            Узнать больше
                         </a>
                     </article>
 
@@ -370,7 +371,7 @@
                         </p>
                         <p class="med-card-price">3 000 ₽</p>
                         <a href="https://t.me/sofiya1203" target="_blank" rel="noopener" class="med-card-link">
-                            Получить медитацию
+                            Узнать больше
                         </a>
                     </article>
 
@@ -388,7 +389,7 @@
                         </p>
                         <p class="med-card-price">3 000 ₽</p>
                         <a href="https://t.me/sofiya1203" target="_blank" rel="noopener" class="med-card-link">
-                            Получить медитацию
+                            Узнать больше
                         </a>
                     </article>
 
@@ -406,7 +407,7 @@
                         </p>
                         <p class="med-card-price">3 000 ₽</p>
                         <a href="https://t.me/sofiya1203" target="_blank" rel="noopener" class="med-card-link">
-                            Получить медитацию
+                            Узнать больше
                         </a>
                     </article>
 
