Fix hero & description section

--- a/meditations/letting-go-of-anxious-thoughts.html
+++ b/meditations/letting-go-of-anxious-thoughts.html
@@ -5,31 +5,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- SEO для конкретной аудиопрограмма -->
+    <!-- Основные SEO -->
     <title>Опора внутри меня — аудиопрограмма Сурии | Стук сердца</title>
     <meta name="description"
-        content="аудиопрограмма «Опора внутри меня»: когда кажется, что всё рушится и держаться не за что. Помогает собрать себя изнутри, вернуть спокойствие и внутренний стержень. Аудио-практика Сурии.">
+        content="Аудиопрограмма «Опора внутри меня»: когда кажется, что всё рушится и держаться не за что. Помогает собрать себя изнутри, вернуть спокойствие и внутренний стержень.">
     <meta name="author" content="Сурия, энергетический практик и таро-терапевт">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Опора внутри меня — аудиопрограмма Сурии">
     <meta property="og:description"
-        content="аудиопрограмма для восстановления внутренней опоры, когда внешние опоры рушатся. Спокойствие, уверенность и стержень изнутри.">
+        content="Аудиопрограмма для восстановления внутренней опоры, когда внешние опоры рушатся. Спокойствие, уверенность и стержень изнутри.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://iuliiakonovalova.github.io/stukserdza/meditation-opora-vnutri.html">
     <meta property="og:image"
         content="https://iuliiakonovalova.github.io/stukserdza/assets/images/meditations-images/inner-support-meditation-image-focus.png">
 
-    <!-- Подключи общий стиль + специальный для аудиопрограмма -->
+    <!-- Можно добавить, если используется Facebook/Twitter -->
+    <meta property="og:locale" content="ru_RU">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Опора внутри меня — аудиопрограмма Сурии">
+    <meta name="twitter:description"
+        content="Аудиопрограмма для восстановления внутренней опоры, спокойствия и внутреннего стержня.">
+    <meta name="twitter:image"
+        content="https://iuliiakonovalova.github.io/stukserdza/assets/images/meditations-images/inner-support-meditation-image-focus.png">
+
+    <!-- Стили -->
     <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="stylesheet" href="../assets/css/meditation-single.css">
-    <!-- Google Fonts -->
+
+    <!-- Шрифты Google -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400&display=swap"
         rel="stylesheet">
 </head>
+
 
 <body>
     <header>
@@ -69,13 +80,13 @@
         <section class="med-single-hero">
             <div class="container med-single-hero-inner">
                 <div class="med-single-hero-main">
-                    <p class="med-single-badge">аудиопрограмма Сурии</p>
-                    <h1 class="med-single-hero-title">Опора внутри меня</h1>
+                    <p class="med-single-badge">Аудиопрограмма Сурии</p>
+                    <h1 class="med-single-hero-title">Отпустить тревожность и навязчивые мысли</h1>
                     <p class="med-single-hero-text">
-                        Когда кажется, что всё рушится, а держаться не за что, эта аудиопрограмма помогает собрать себя
-                        изнутри. Она возвращает спокойствие, уверенность и чувство, что вы можете опереться на себя, без
-                        ожиданий от других. После прослушивания исчезает растерянность, появляется внутренний стержень и
-                        ощущение, что вы снова стоите на ногах.
+                        Когда в голове бесконечная карусель: одни и те же мысли по кругу, тревога о будущем,
+                        прокручивание прошлого. Эта медитация помогает остановить этот поток, успокоить голову и тело,
+                        наконец выдохнуть. После прослушивания становится тихо внутри, и вы перестаёте мучить себя тем,
+                        что не даёт покоя.
                     </p>
                     <p class="med-single-price">3 000 ₽</p>
                     <a href="#contact" aria-lable="Go to contact section" class="btn-primary med-single-cta">
@@ -83,8 +94,8 @@
                     </a>
                 </div>
                 <figure class="med-single-hero-figure">
-                    <img src="../assets/images/meditations-images/inner-support-meditation-image-focus.png"
-                        alt="аудиопрограмма «Опора внутри меня» — образ спокойствия и внутренней силы"
+                    <img src="../assets/images/meditations-images/letting-go-of-anxious-thoughts-meditation-image-focus.png"
+                        alt="аудиопрограмма «Отпустить тревожность и навязчивые мысли» — образ спокойствия и внутренней силы"
                         class="med-single-hero-image">
                 </figure>
             </div>
@@ -94,24 +105,19 @@
             <div class="container">
                 <div class="med-single-problem-content">
                     <h2 class="med-single-problem-title ">
-                        Опора внутри меня:<br>
+                        Отпустить тревожность и навязчивые мысли:<br>
 
                     </h2>
                     <p class="med-single-problem-text extra-golden-line-after">
-                        встаньте на свои ноги, когда земля уходит из-под них
+                        выключите карусель в голове
                     </p>
-
                     <p class="med-single-problem-text extra-golden-line-after">
-                        Бывает так, что жизнь посыпалась. Может, ушёл мужчина, на которого вы рассчитывали. Может,
-                        потеряли работу.
-                        Может, поругались с близкими. Или просто накрыло: всё не так, ничего не понятно, и вы не знаете,
-                        что делать.
+                        Представьте: вы ложитесь спать, закрываете глаза, и понеслось. «А что если не получится?», «А
+                        вдруг он имел в виду другое?», «А как я завтра буду...», «А что будет через месяц?».
                     </p>
-
                     <p class="med-single-problem-text extra-golden-line-after">
-                        Хочется, чтобы кто-то взял за руку и сказал, что всё будет хорошо. Но рядом никого, или есть, но
-                        не помогает.
-                        И вы чувствуете себя одной посреди хаоса.
+                        Одна мысль цепляет другую, третью, пятую. Вы уже устали думать, но остановиться не можете. Утром
+                        встаёте разбитой, как будто всю ночь работали.
                     </p>
                 </div>
             </div>
