--- a/meditations/inner-support-meditation.html
+++ b/meditations/inner-support-meditation.html
@@ -69,7 +69,7 @@
         <section class="med-single-hero">
             <div class="container med-single-hero-inner">
                 <div class="med-single-hero-main">
-                    <p class="med-single-badge">аудиопрограмма Сурии</p>
+                    <p class="med-single-badge">Аудиопрограмма Сурии</p>
                     <h1 class="med-single-hero-title">Опора внутри меня</h1>
                     <p class="med-single-hero-text">
                         Когда кажется, что всё рушится, а держаться не за что, эта аудиопрограмма помогает собрать себя
