Fix bullets section

--- a/meditations/letting-go-of-anxious-thoughts.html
+++ b/meditations/letting-go-of-anxious-thoughts.html
@@ -122,48 +122,45 @@
                 </div>
             </div>
         </section>
-
-
-
         <!-- Как помогает -->
         <section class="med-single-benefits">
             <div class="container">
-                <h2 class="section-title">Когда внутренней опоры нет:</h2>
+                <h2 class="section-title">Как выглядит тревожность изнутри:</h2>
                 <div class="med-single-benefits-grid">
                     <div class="med-single-benefit">
                         <div class="med-single-benefit-icon">✦</div>
                         <p>
-                            Вы ищете поддержку у других, но её недостаточно или её нет совсем.
+                            Вы прокручиваете одну и ту же ситуацию снова и снова, хотя это ничего не меняет.
                         </p>
                     </div>
                     <div class="med-single-benefit">
                         <div class="med-single-benefit-icon">✦</div>
                         <p>
-                            Без одобрения и подтверждения извне не уверены в своих решениях.
+                            Думаете о будущем и видите там в основном плохие сценарии.
                         </p>
                     </div>
                     <div class="med-single-benefit">
                         <div class="med-single-benefit-icon">✦</div>
                         <p>
-                            Когда что-то идёт не так, вас сносит. Паника, растерянность, ступор.
+                            Не можете расслабиться, даже когда всё нормально. Фоном ощущение «что-то не так».
                         </p>
                     </div>
                     <div class="med-single-benefit">
                         <div class="med-single-benefit-icon">✦</div>
                         <p>
-                            Вы не доверяете себе. Кажется, что сами не справитесь, нужен кто-то рядом.
+                            Тело напряжено: плечи, челюсть, живот. Как будто всё время ждёте удара.
                         </p>
                     </div>
                     <div class="med-single-benefit">
                         <div class="med-single-benefit-icon">✦</div>
                         <p>
-                            Настроение зависит от других: похвалили, вы в порядке, раскритиковали, вы в яме.
+                            Просыпаетесь уже с тревогой, хотя ничего не произошло.
                         </p>
                     </div>
                     <div class="med-single-benefit">
                         <div class="med-single-benefit-icon">✦</div>
                         <p>
-                            Ощущение, что вы как дерево без корней. Любой ветер может повалить.
+                            Устали от собственной головы. Хочется просто выключить мысли, но не получается.
                         </p>
                     </div>
 
