Fix all content

--- a/meditations/letting-go-of-anxious-thoughts.html
+++ b/meditations/letting-go-of-anxious-thoughts.html
@@ -172,15 +172,14 @@
             <div class="container">
                 <div class="med-single-problem-content">
                     <p class="med-single-problem-text  extra-golden-line-after">
-                        Внешняя опора это хорошо. Но если вся ваша устойчивость зависит от других людей или
-                        обстоятельств, вы всегда будете уязвимы. Настоящая опора та, которая внутри. Когда вы знаете:
-                        что бы ни случилось, я выдержу. Я справлюсь. Я могу положиться на себя.
+                        Тревожность это не просто «много думаете». Это когда мозг застрял в режиме опасности и не может
+                        выйти. Он сканирует угрозы, которых нет, и вы живёте в постоянном напряжении. Это очень
+                        истощает.
                     </p>
 
                     <p class="med-single-problem-text extra-golden-line-after">
-                        Эта аудиопрограмма помогает найти и укрепить эту внутреннюю опору. Не через аффирмации и «я
-                        сильная»,
-                        а через реальное ощущение в теле: я стою на своих ногах.
+                        Эта медитация помогает выйти из этого режима. Не силой воли, не «просто перестань думать», а
+                        мягко, через тело и состояние. Вы даёте мозгу сигнал: сейчас безопасно, можно отпустить.
                     </p>
                 </div>
             </div>
@@ -191,37 +190,33 @@
                 <h2 class="section-title">Что реально чувствуется потом:</h2>
                 <ul class="med-single-effect-list">
                     <li>
-                        Уходит растерянность. Вы понимаете, что даже если всё сложно, вы справитесь.
+                        Мысли замедляются. Карусель останавливается, в голове становится тише.
                     </li>
                     <li>
-                        Появляется внутренний стержень. Вас не качает от каждого слова или события.
+                        Тело расслабляется. Уходит это фоновое напряжение, которое вы носили так долго, что перестали
+                        замечать.
                     </li>
                     <li>
-                        Вы меньше зависите от других. Поддержка приятна, но вы можете и без неё.
+                        Появляется ощущение «сейчас всё в порядке». Не завтра, не когда решится, а прямо сейчас.
                     </li>
                     <li>
-                        Спокойная уверенность: что бы ни случилось, у меня есть я.
+                        Вы можете выдохнуть и просто быть, не думая, не контролируя, не тревожась.
                     </li>
                 </ul>
             </div>
         </section>
-
         <!-- Секция "Проблема + решение" — один столбец -->
         <section class="med-single-problem">
             <div class="container">
                 <div class="med-single-problem-content">
 
                     <p class="med-single-problem-text extra-golden-line-after">
-                        Особенно если сейчас трудно и кажется, что не на что опереться. Эта аудиопрограмма напомнит вам,
-                        что
-                        самая надёжная опора уже есть. Она внутри вас.
-
-
+                        Особенно если вы устали от собственных мыслей и хотите наконец почувствовать тишину внутри. Эта
+                        медитация даст вам передышку, которую вы заслуживаете.
                     </p>
                 </div>
             </div>
         </section>
-
         <!-- Контакты -->
         <section id="contact">
             <div class="container contact-grid">
