Add new page for let go of control meditation

--- a/meditations.html
+++ b/meditations.html
@@ -256,7 +256,8 @@
                             чувствовать жизнь здесь и сейчас.
                         </p>
                         <p class="med-card-price">3 000 ₽</p>
-                        <a href="https://t.me/sofiya1203" target="_blank" rel="noopener" class="med-card-link">
+                        <a href="meditations/letting-go-of-control-meditation.html" class="med-card-link"
+                            aria-label="Go to letting go of control meditation">
                             Узнать больше
                         </a>
                     </article>
