--- a/meditations/inner-support-meditation.html
+++ b/meditations/inner-support-meditation.html
@@ -50,6 +50,10 @@
                         </a>
                     </li>
                     <li>
+                        <a href="#top" aria-label="Вернуться в начало страницы">
+                            Вверх
+                        </a>
+                    <li>
                         <a href="../meditations.html" aria-label="Go to all meditations">
                             Медитации & аудиопрограммы
                         </a>
@@ -275,6 +279,9 @@
         <div class="container med-footer-inner">
             <div>© 2025 Стук сердца by Suria</div>
             <div class="footer-nav">
+                <a href="#top" aria-label="Вернуться в начало страницы">
+                    Вверх
+                </a>
                 <a href="../index.html" aria-label="Go to homepage">
                     Главная
                 </a>
