--- a/meditations/letting-go-of-anxious-thoughts.html
+++ b/meditations/letting-go-of-anxious-thoughts.html
@@ -60,6 +60,9 @@
                             Главная
                         </a>
                     </li>
+                    <a href="#top" aria-label="Вернуться в начало страницы">
+                        Вверх
+                    </a>
                     <li>
                         <a href="../meditations.html" aria-label="Go to all meditations">
                             Медитации & аудиопрограммы
@@ -273,6 +276,9 @@
         <div class="container med-footer-inner">
             <div>© 2025 Стук сердца by Suria</div>
             <div class="footer-nav">
+                <a href="#top" aria-label="Вернуться в начало страницы">
+                    Вверх
+                </a>
                 <a href="../index.html" aria-label="Go to homepage">
                     Главная
                 </a>
