Fix top/hero id

--- a/meditations/letting-go-of-anxious-thoughts.html
+++ b/meditations/letting-go-of-anxious-thoughts.html
@@ -60,7 +60,7 @@
                             Главная
                         </a>
                     </li>
-                    <a href="#top" aria-label="Вернуться в начало страницы">
+                    <a href="#hero" aria-label="Вернуться в начало страницы">
                         Вверх
                     </a>
                     <li>
@@ -80,7 +80,7 @@
 
     <main>
         <!-- Hero с аудио -->
-        <section class="med-single-hero">
+        <section class="med-single-hero" id="hero">
             <div class="container med-single-hero-inner">
                 <div class="med-single-hero-main">
                     <p class="med-single-badge">Аудиопрограмма Сурии</p>
@@ -276,7 +276,7 @@
         <div class="container med-footer-inner">
             <div>© 2025 Стук сердца by Suria</div>
             <div class="footer-nav">
-                <a href="#top" aria-label="Вернуться в начало страницы">
+                <a href="#hero" aria-label="Вернуться в начало страницы">
                     Вверх
                 </a>
                 <a href="../index.html" aria-label="Go to homepage">
