--- a/meditations/inner-support-meditation.html
+++ b/meditations/inner-support-meditation.html
@@ -50,7 +50,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#top" aria-label="Вернуться в начало страницы">
+                        <a href="#hero" aria-label="Вернуться в начало страницы">
                             Вверх
                         </a>
                     <li>
@@ -70,7 +70,7 @@
 
     <main>
         <!-- Hero с аудио -->
-        <section class="med-single-hero">
+        <section class="med-single-hero" id="hero">
             <div class="container med-single-hero-inner">
                 <div class="med-single-hero-main">
                     <p class="med-single-badge">Аудиопрограмма Сурии</p>
@@ -279,7 +279,7 @@
         <div class="container med-footer-inner">
             <div>© 2025 Стук сердца by Suria</div>
             <div class="footer-nav">
-                <a href="#top" aria-label="Вернуться в начало страницы">
+                <a href="#hero" aria-label="Вернуться в начало страницы">
                     Вверх
                 </a>
                 <a href="../index.html" aria-label="Go to homepage">
