--- a/meditations/letting-go-of-control-meditation.html
+++ b/meditations/letting-go-of-control-meditation.html
@@ -88,11 +88,10 @@
                     <p class="med-single-badge">Аудиопрограмма Сурии</p>
                     <h1 class="med-single-hero-title">Отпустить тревожность и навязчивые мысли</h1>
                     <p class="med-single-hero-text">
-                        Когда в голове бесконечная карусель: одни и те же мысли по кругу, тревога о будущем,
-                        прокручивание прошлого. Эта Аудиопрограмма помогает остановить этот поток, успокоить голову и
-                        тело,
-                        наконец выдохнуть. После прослушивания становится тихо внутри, и вы перестаёте мучить себя тем,
-                        что не даёт покоя.
+                        Если вы постоянно прокручиваете: почему он так сказал, что имел в виду, а что будет если... это
+                        контроль. Ум держит прошлое и будущее, а жить в настоящем не получается. Эта медитация помогает
+                        разжать хватку, перестать цепляться за то, что нельзя изменить, и начать чувствовать жизнь здесь
+                        и сейчас.
                     </p>
                     <p class="med-single-price">3 000 ₽</p>
                     <a href="#contact" aria-lable="Go to contact section" class="btn-primary med-single-cta">
@@ -100,8 +99,8 @@
                     </a>
                 </div>
                 <figure class="med-single-hero-figure">
-                    <img src="../assets/images/meditations-images/letting-go-of-anxious-thoughts-meditation-image-focus.png"
-                        alt="аудиопрограмма «Отпустить тревожность и навязчивые мысли» — образ спокойствия и внутренней силы"
+                    <img src="../assets/images/meditations-images/letting-go-of-control-meditation-image-focus.png"
+                        alt="Обложка аудиопрограммы 'Отпустить тревожность и навязчивые мысли'"
                         class="med-single-hero-image">
                 </figure>
             </div>
@@ -111,19 +110,21 @@
             <div class="container">
                 <div class="med-single-problem-content">
                     <h2 class="med-single-problem-title ">
-                        Отпустить тревожность и навязчивые мысли:<br>
+                        Отпускаю контроль:<br>
 
                     </h2>
                     <p class="med-single-problem-text extra-golden-line-after">
-                        выключите карусель в голове
+                        перестаньте держать то, что не в ваших руках
+
                     </p>
                     <p class="med-single-problem-text extra-golden-line-after">
-                        Представьте: вы ложитесь спать, закрываете глаза, и понеслось. «А что если не получится?», «А
-                        вдруг он имел в виду другое?», «А как я завтра буду...», «А что будет через месяц?».
+                        Представьте: он написал «ок» вместо нормального ответа. И вы час анализируете: почему так
+                        коротко? Обиделся? Или занят? А может, охладел? Перечитываете переписку, ищете знаки.
                     </p>
                     <p class="med-single-problem-text extra-golden-line-after">
-                        Одна мысль цепляет другую, третью, пятую. Вы уже устали думать, но остановиться не можете. Утром
-                        встаёте разбитой, как будто всю ночь работали.
+                        Или другое: на работе сказали «поговорим завтра», и вы всю ночь прокручиваете, что это значит.
+                        Уволят? Повысят? Что я сделала не так? Вы пытаетесь просчитать то, что просчитать невозможно.
+                        Знакомо?
                     </p>
                 </div>
             </div>
@@ -131,45 +132,45 @@
         <!-- Как помогает -->
         <section class="med-single-benefits">
             <div class="container">
-                <h2 class="section-title">Как выглядит тревожность изнутри:</h2>
+                <h2 class="section-title">Как выглядит гиперконтроль:</h2>
                 <div class="med-single-benefits-grid">
                     <div class="med-single-benefit">
                         <div class="med-single-benefit-icon">✦</div>
                         <p>
-                            Вы прокручиваете одну и ту же ситуацию снова и снова, хотя это ничего не меняет.
+                            Вы анализируете каждое слово, каждую интонацию, каждый знак препинания в сообщениях.
                         </p>
                     </div>
                     <div class="med-single-benefit">
                         <div class="med-single-benefit-icon">✦</div>
                         <p>
-                            Думаете о будущем и видите там в основном плохие сценарии.
+                            Пытаетесь предугадать, что будет, и подготовиться ко всем вариантам заранее.
                         </p>
                     </div>
                     <div class="med-single-benefit">
                         <div class="med-single-benefit-icon">✦</div>
                         <p>
-                            Не можете расслабиться, даже когда всё нормально. Фоном ощущение «что-то не так».
+                            Не можете отпустить ситуацию, пока не поймёте её «до конца».
                         </p>
                     </div>
                     <div class="med-single-benefit">
                         <div class="med-single-benefit-icon">✦</div>
                         <p>
-                            Тело напряжено: плечи, челюсть, живот. Как будто всё время ждёте удара.
+                            Прошлое не отпускает: вы возвращаетесь к разговорам, которые были месяцы назад.
                         </p>
                     </div>
                     <div class="med-single-benefit">
                         <div class="med-single-benefit-icon">✦</div>
                         <p>
-                            Просыпаетесь уже с тревогой, хотя ничего не произошло.
+                            Будущее пугает: вы живёте в «а что если», вместо того чтобы жить сейчас.
                         </p>
                     </div>
                     <div class="med-single-benefit">
                         <div class="med-single-benefit-icon">✦</div>
                         <p>
-                            Устали от собственной головы. Хочется просто выключить мысли, но не получается.
+                            Вы устали, но остановиться не можете. Как будто если перестанете контролировать, всё
+                            развалится.
                         </p>
                     </div>
-
                 </div>
             </div>
         </section>
@@ -178,15 +179,15 @@
             <div class="container">
                 <div class="med-single-problem-content">
                     <p class="med-single-problem-text  extra-golden-line-after">
-                        Тревожность это не просто «много думаете». Это когда мозг застрял в режиме опасности и не может
-                        выйти. Он сканирует угрозы, которых нет, и вы живёте в постоянном напряжении. Это очень
-                        истощает.
+                        Контроль это иллюзия безопасности. Кажется: если всё продумаю, ничего плохого не случится. Но на
+                        самом деле вы просто тратите энергию на то, что не можете изменить. И упускаете жизнь, которая
+                        происходит прямо сейчас.
                     </p>
 
                     <p class="med-single-problem-text extra-golden-line-after">
-                        Эта Аудиопрограмма помогает выйти из этого режима. Не силой воли, не «просто перестань думать»,
-                        а
-                        мягко, через тело и состояние. Вы даёте мозгу сигнал: сейчас безопасно, можно отпустить.
+                        Эта медитация помогает разжать эту хватку. Не отказаться от ответственности, а перестать держать
+                        то, что не в ваших руках. Отпустить прошлое, потому что его не изменить. Отпустить будущее,
+                        потому что оно ещё не наступило.
                     </p>
                 </div>
             </div>
@@ -197,17 +198,18 @@
                 <h2 class="section-title">Что реально чувствуется потом:</h2>
                 <ul class="med-single-effect-list">
                     <li>
-                        Мысли замедляются. Карусель останавливается, в голове становится тише.
+                        Вы перестаёте прокручивать. Мысли отпускают ситуацию, и вы можете переключиться.
+
                     </li>
                     <li>
-                        Тело расслабляется. Уходит это фоновое напряжение, которое вы носили так долго, что перестали
-                        замечать.
+                        Появляется ощущение «будь что будет, я справлюсь». Спокойная уверенность вместо тревожного
+                        контроля.
                     </li>
                     <li>
-                        Появляется ощущение «сейчас всё в порядке». Не завтра, не когда решится, а прямо сейчас.
+                        Вы начинаете замечать настоящее. Не жить в голове, а чувствовать жизнь здесь и сейчас.
                     </li>
                     <li>
-                        Вы можете выдохнуть и просто быть, не думая, не контролируя, не тревожась.
+                        Уходит напряжение. Вы больше не держите мир на своих плечах.
                     </li>
                 </ul>
             </div>
@@ -216,10 +218,9 @@
         <section class="med-single-problem">
             <div class="container">
                 <div class="med-single-problem-content">
-
                     <p class="med-single-problem-text extra-golden-line-after">
-                        Особенно если вы устали от собственных мыслей и хотите наконец почувствовать тишину внутри. Эта
-                        Аудиопрограмма даст вам передышку, которую вы заслуживаете.
+                        Если вы устали всё контролировать и хотите наконец выдохнуть, эта медитация для вас. Отпустите
+                        то, что не можете изменить, и почувствуйте, как становится легче.
                     </p>
                 </div>
             </div>
